# RAG-books

./: .gitignore  README.md  chapter.txt  pyproject.toml
data/: duckdb.db
scripts_py/: chapter_chunking.py  chunk_embedding.py  embedding.py  match_query.py  scrap_chapters.py
scripts_py/Qwen3-Embedding-0.6B/: chunk_embedding.py  match_query.py
scripts_py/scrap_chapters/o_nome_do_vento/: scrap_chapters.py
