[project]
name = "rag-lof"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.14.0",
    "duckdb>=1.4.0",
    "flash-attn>=2.8.3",
    "ipykernel>=6.30.1",
    "langchain-text-splitters>=0.3.11",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "tdqm>=0.0.1",
    "torch>=2.8.0",
]
