[project]
name = "rag-lof"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.14.0",
    "duckdb>=1.4.0",
    "ebooklib>=0.19",
    "flash-attn>=2.8.3",
    "ipykernel>=6.30.1",
    "langchain-text-splitters>=0.3.11",
    "markdown>=3.9",
    "ollama>=0.6.0",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.1",
    "tdqm>=0.0.1",
    "torch>=2.8.0",
]
